--- a/_layouts/questionnaire.html
+++ b/_layouts/questionnaire.html
@@ -1,29 +1,37 @@
----
-title: Measures2Go
----
-
+<!doctype html>
 <html>
 <head>
-	<title>{{ page.title }}</title>
-    <title>Question</title>
+    <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css">
-    <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 </head>
 <body>
-    <div data-role="page">
- 
+    <div data-role="page" id='{{ page.slug }}'>
         <div data-role="header">
-            <h1>Measures2Go</h1>
+            <h1>{{ page.title }}</h1>
         </div><!-- /header -->
  
         <div data-role="content">
-        	{% for post in site.posts %}
-				<a href="{{ post.url }}" class="ui-btn">{{ post.title }}</a>
-			{% endfor %}
+			<form>
+				<div id="form"></div>
+
+				<div class="ui-corner-all">
+				  <div class="ui-bar ui-bar-a">
+					<h3>Summary</h3>
+				  </div>
+				  <div class="ui-body ui-body-a">
+					<h2 id="summary"></h2>
+				  </div>
+				</div>
+
+				<input type="button" value="Save Data">
+			</form>
         </div><!-- /content -->
+
+		{{ content }}
     </div><!-- /page -->
 </body>
 </html>
