--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
 <style>
-  body {
+body {
     background-color: #b0c4de;
 }
-
 </style>
- 
+</head>
+<body>
+
+</body>
+</html>
